@@ -18,16 +18,15 @@ dependencies {
     implementation group: 'org.bouncycastle',           name: 'bcprov-jdk15on',         version: '1.62'
     implementation group: 'org.bouncycastle',           name: 'bcpg-jdk15on',           version: '1.62'
 
-    implementation group: 'com.github.softwareverde',   name: 'java-util',              version: 'v2.1.0'
+    implementation group: 'com.github.softwareverde',   name: 'java-util',              version: 'v2.1.3'
     implementation group: 'com.github.softwareverde',   name: 'java-logging',           version: 'v2.1.0'
 
     implementation group: 'commons-codec',              name: 'commons-codec',          version: '1.13'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 test {
     maxHeapSize = "4096m"
-    jvmArgs "-XX:MaxPermSize=4096m"
     jvmArgs "-XX:MaxMetaspaceSize=4096m"
 }
